<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button"
        android:onClick="login"
        android:layout_marginTop="109dp"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:layout_marginStart="84dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="77dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/etUsername"
        android:layout_alignStart="@+id/etUsername" />

    <Button
        android:id="@+id/bRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registration"
        android:onClick="goToRegistration"
        android:layout_below="@+id/bLogin"
        android:layout_centerHorizontal="true" />
</RelativeLayout>

</LinearLayout>
